; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/extr_filecheck.c_ocfs2_filecheck_done_entry.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/extr_filecheck.c_ocfs2_filecheck_done_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_filecheck_sysfs_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.ocfs2_filecheck_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ocfs2_filecheck_sysfs_entry*, %struct.ocfs2_filecheck_entry*)* @ocfs2_filecheck_done_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ocfs2_filecheck_done_entry(%struct.ocfs2_filecheck_sysfs_entry* %0, %struct.ocfs2_filecheck_entry* %1) #0 {
  %3 = alloca %struct.ocfs2_filecheck_sysfs_entry*, align 8
  %4 = alloca %struct.ocfs2_filecheck_entry*, align 8
  store %struct.ocfs2_filecheck_sysfs_entry* %0, %struct.ocfs2_filecheck_sysfs_entry** %3, align 8
  store %struct.ocfs2_filecheck_entry* %1, %struct.ocfs2_filecheck_entry** %4, align 8
  %5 = load %struct.ocfs2_filecheck_sysfs_entry*, %struct.ocfs2_filecheck_sysfs_entry** %3, align 8
  %6 = getelementptr inbounds %struct.ocfs2_filecheck_sysfs_entry, %struct.ocfs2_filecheck_sysfs_entry* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load %struct.ocfs2_filecheck_entry*, %struct.ocfs2_filecheck_entry** %4, align 8
  %11 = getelementptr inbounds %struct.ocfs2_filecheck_entry, %struct.ocfs2_filecheck_entry* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.ocfs2_filecheck_sysfs_entry*, %struct.ocfs2_filecheck_sysfs_entry** %3, align 8
  %13 = getelementptr inbounds %struct.ocfs2_filecheck_sysfs_entry, %struct.ocfs2_filecheck_sysfs_entry* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 4
  %18 = load %struct.ocfs2_filecheck_sysfs_entry*, %struct.ocfs2_filecheck_sysfs_entry** %3, align 8
  %19 = getelementptr inbounds %struct.ocfs2_filecheck_sysfs_entry, %struct.ocfs2_filecheck_sysfs_entry* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = call i32 @spin_unlock(i32* %21)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
